# django-dog-food

./: .env-example  Dockerfile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini
dogfood/: asgi.py  settings.py  urls.py  wsgi.py
foodtracker/: agent_service.py  apps.py  forms.py  models.py  urls.py  views.py
foodtracker/migrations/: 0001_initial.py  0002_add_teeth_brush_field.py
foodtracker/templates/foodtracker/: food_log_list.html
foodtracker/templates/foodtracker/partials/: food_chart.html  food_log_form.html  food_log_list_content.html  food_log_row.html
foodtracker/tests/: test_agent_service.py  test_models.py  test_views.py
