[project]
name = "django-dog-food"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Honstain",email = "honstain@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [{include = "django_dog_food", from = "src"}]

[tool.poetry.dependencies]
django = "^5.2.1"
django-stubs = "^5.2.0"
pytest-django = "^4.11.1"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
